# tanium-sensor-project

./: .gitignore  AGENTS.md  LICENSE  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml
sensors/bar/: README.ja.md  README.md  __init__.py  linux.py  mac.py  tanium_settings.yaml  win.py
sensors/foo/: README.ja.md  README.md  __init__.py  linux.py  mac.py  tanium_settings.yaml  win.py
sensors/foo/fixtures/mac/files/Users/charlie/.ssh/: id_ed25519
sensors/foo/fixtures/win/files/Users/alice/.ssh/: id_ed25519
tests/: conftest.py
tests/helpers/: fake_entries.py  fixtures.py
tests/sensors/bar/: test_linux.py  test_mac.py  test_win.py
tests/sensors/foo/: test_linux.py  test_mac.py  test_win.py
tests/sensors/foo/fixtures/linux/files/home/erin/.ssh/: id_ed25519
tests/tanium/: test_multi_column_settings.py  test_repo_integrity.py  test_sensor_size_budget.py  test_single_column_settings.py
